syntax = "proto3";
import "Status.proto";
import "asset.proto";
import "MediaFileType.proto";
import "catalog.proto";
import "EPGChannelProgrammeObject.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "phoenix";
option go_package = "./models";

package phoenix;

message GetEpgChannelIdRequest {
  int32 mediaId = 1;
  int32 groupId = 2;
}

message HasVirtualAssetTypeRequest {
  int32 GroupId = 1;
  ObjectVirtualAssetInfoType virtualAssetInfoType = 2;
}

message HandleBlockingSegmentRequest {
  int32 GroupId = 1;
  int64 UserId = 2;
  string udid = 3;
  string Ip = 4;
  int64 domainId = 5;
  ObjectVirtualAssetInfoType virtualAssetInfoType = 6;
  string subscriptionId = 7;
}

message HandleBlockingSegmentResponse {
  Status status = 1;
}

message GetAssetsForValidationRequest{
  eAssetTypes assetType = 1;
  int32 groupId = 2;
  int64 assetId = 3;
}
message GetAssetsForValidationResponse{
  repeated SlimAsset SlimAsset = 1;
}

message GetMediaFilesRequest{
  int32 groupId = 1;
  int64 mediaId = 2;
}
message GetMediaFilesResponse{
  repeated MediaFile MediaFiles = 1;
}

message GetMediaInfoRequest{
  int32 groupId = 1;
  string assetId = 2; 
  eAssetTypes assetType = 3;
  int64 userId = 4;
  string udid = 5;
  int64 domainId = 6;
  int32 mediaFileId = 7;
  int32 programId = 8;
}

message GetMediaInfoResponse{
  Status status = 1;
  int64 mediaId = 2;
  Recording recording = 3;
  EPGChannelProgrammeObject program = 4;
  bool isExternalRecordingIgnoreMode = 5;
}

message GetMediaByIdRequest{
  int32 groupId = 1;
  int32 mediaId = 2;
}

message GetMediaByIdResponse{
  string name = 1;
  string description = 2;
  string externalIDs = 3;
  string lastWatchedDevice = 4;
  string siteUserGuid = 5;
  string entryId = 6;
  string CoGuid = 7;
  bool IsActive = 8;
  bool EnableCDVR = 9;
  bool EnableCatchUp = 10;
  bool EnableStartOver = 11;
  bool EnableTrickPlay = 12;
  int64 CatchUpBuffer = 13;
  int64 TrickPlayBuffer = 14;
  bool EnableRecordingPlaybackNonEntitledChannel = 15;
  string ExternalCdvrId = 16;
  string WatchPermissionRule = 17;
  string GeoblockRule = 18;
  string DeviceRule = 19;
}

message GetProgramScheduleRequest{
  int32 groupId = 1;
  int32 programId = 2;
}

message GetProgramScheduleResponse{
  google.protobuf.Timestamp StartDate = 1;
  google.protobuf.Timestamp EndTime = 2;
}

message GetDomainRecordingsRequest{
  int32 groupId = 1;
  int64 domainId = 2;
  bool shouldFilterViewableRecordingsOnly = 3;
}

message GetDomainRecordingsResponse{
    map<int64, Recording> recording = 1;
}

message GetEpgsByIdsRequest{
  int32 groupId = 1;
  repeated int64 epgIds = 2;
}

message GetEpgsByIdsResponse{
    repeated EPGChannelProgrammeObject epgs = 1;
}

message GetLinearMediaInfoByEpgChannelIdAndFileTypeRequest{
    int32 groupId = 1;
    string epgChannelId = 2;
    string fileType = 3;
}

message GetLinearMediaInfoByEpgChannelIdAndFileTypeResponse{
  bool isSuccess = 1;
  int32 linearMediaId = 2;
  int32 mediaFileId = 3;
}

message MapMediaFilesRequest{
  int32 groupId = 1;
  repeated int32 mediaFileIDs = 2;
}

message MapMediaFilesResponse{
  repeated MediaMapper mediaMappers = 1;
}

message GetEPGChannelCDVRIdRequest{
  int32 groupId = 1;
  int64 epgChannelId = 2;
}

message GetRecordingLinkByFileTypeRequest{
  int32 groupId = 1;
  int64 recordingId = 2;
  string fileType = 3;
}

message GetRecordingLinkByFileTypeResponse{
  string recordingUrl = 1;
}


message GetGroupMediaFileTypesRequest{
  int32 groupId = 1;
}

message GetGroupMediaFileTypesResponse{
  Status status = 1;
  repeated MediaFileType mediaFileType = 2;
  int32 totalCount = 3;
}

message AddVirtualAssetInfoRequest{
    int32 groupId = 1;
    VirtualAssetInfo virtualAssetInfo = 2;
}

message AddVirtualAssetInfoResponse{
    Status status = 1;
    int64 assetId = 2;
}

message UpdateVirtualAssetInfoRequest{
    int32 groupId = 1;
    VirtualAssetInfo virtualAssetInfo = 2;
}

message UpdateVirtualAssetInfoResponse{
    Status status = 1;
    int64 assetId = 2;
}

message DeleteVirtualAssetInfoRequest{
    int32 groupId = 1;
    int64 id = 2;
    ObjectVirtualAssetInfoType type = 3;
}

message DeleteVirtualAssetInfoResponse{
    Status status = 1;
}

message GetProgramsByChannelIdRequest{
  int32 groupId = 1;
  string channelId = 2;
}

message GetProgramsByChannelIdResponse{
  repeated Program programs = 1;
}

message GetChannelIdsRequest{
  int32 groupId = 1;
}

message GetChannelIdsResponse{
  map<int64, string> channels = 1;
}